--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
   "fastapi>=0.115.6",
   "pydantic>=2.10.5",
   "pydantic-settings>=2.7.1",
+  "scipy>=1.15.1",
   "tensorflow>=2.18.0",
   "torch>=2.5.1",
   "transformers>=4.48.1",
