--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,10 +7,16 @@ requires-python = ">=3.12"
 dependencies = [
   "einops>=0.8.0",
   "fastapi>=0.115.6",
+  "loguru>=0.7.3",
+  "pillow>=11.1.0",
   "pydantic>=2.10.5",
   "pydantic-settings>=2.7.1",
+  "python-multipart>=0.0.20",
   "scipy>=1.15.1",
+  "sentencepiece>=0.2.0",
   "tensorflow>=2.18.0",
+  "tf-keras>=2.18.0",
+  "tiktoken>=0.9.0",
   "torch>=2.5.1",
   "transformers>=4.48.1",
   "uvicorn>=0.34.0",
