Refactor API endpoint in UploadPage and add production build script
- Updated the API endpoint in UploadPage.js to use a relative path for fetching songs.
- Added a new script (build_prod.sh) to automate the production build process for the frontend and copy the build files to the backend static directory.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,16 +1,29 @@
-FROM python:3.12-slim
+FROM --platform=linux/amd64 python:3.10-slim
 
-RUN apt-get update && apt-get install -y  cmake yasm pkg-config autoconf automake libtool zlib1g-dev curl git build-essential libeigen3-dev libyaml-dev libfftw3-dev libavcodec-dev libavformat-dev libavutil-dev libswresample-dev libsamplerate0-dev libtag1-dev libchromaprint-dev python3-dev python3-numpy-dev python3-numpy python3-yaml python3-six
+
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    libyaml-dev \
+    libfftw3-dev \
+    libavcodec-dev \
+    libavformat-dev \
+    libavutil-dev \
+    libswresample-dev \
+    python3-dev \
+    python3-numpy-dev \
+    python3-yaml \
+    git \
+    wget \
+    pkg-config
 
 WORKDIR /app
 COPY . .
 
-# 3) Create your venv, install rest of Python deps
 RUN pip install --no-cache-dir uv \
     && uv venv \
     && chmod +x .venv/bin/activate \
     && . .venv/bin/activate \
-    && uv sync --extra platform-specific
+    && uv sync
 
 
 RUN mkdir -p uploads
@@ -18,7 +31,7 @@ RUN mkdir -p uploads
 ENV HOST="0.0.0.0" \
     PORT="8000" \
     ENV="prod" \
-    MONGO_URI="mongodb+srv://oria:....@..." \
+    MONGO_URI="mongodb+srv://oria:AydZmQPhhle2GDGF@oriapp.vsmdghw.mongodb.net" \
     MONGO_DB_NAME="oriapp_db"
 
 EXPOSE 8000
