--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -21,8 +21,6 @@ COPY . .
 
 RUN pip install --no-cache-dir uv \
     && uv venv \
-    && chmod +x .venv/bin/activate \
-    && . .venv/bin/activate \
     && uv sync
 
 
@@ -36,4 +34,4 @@ ENV HOST="0.0.0.0" \
 
 EXPOSE 8000
 
-CMD ["uvicorn", "oria_backend.app:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["./.venv/bin/uvicorn", "oria_backend.app:app", "--host", "0.0.0.0", "--port", "8000"]
