--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,15 +6,12 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
   "einops>=0.8.0",
-
   # macOS: grab the prebuilt TF-enabled dev wheels
-  "essentia>=2.1b6.dev1177; sys_platform=='darwin'",
-  "essentia-tensorflow>=2.1b6.dev1177; sys_platform=='darwin'",
-
+  #"essentia>=2.1b6.dev1177; sys_platform=='darwin'",
+  #"essentia-tensorflow>=2.1b6.dev1177; sys_platform=='darwin'",
   # Linux: build from Git (will compile the library + TF wrappers)
-  "essentia==2.1b6.dev1110; sys_platform=='linux'",
-  "essentia-tensorflow==2.1b6.dev1110; sys_platform=='linux'",
-
+  #"essentia==2.1b6.dev1110; sys_platform=='linux'",
+  #"essentia-tensorflow==2.1b6.dev1110; sys_platform=='linux'",
   "fastapi>=0.115.6",
   "googletrans>=4.0.2",
   "loguru>=0.7.3",
@@ -32,4 +29,6 @@ dependencies = [
   "torch>=2.5.1",
   "transformers>=4.48.1",
   "uvicorn>=0.34.0",
+  "librosa>=0.11.0",
+  "sentence-transformers>=4.1.0",
 ]
