--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
   "pydantic>=2.10.5",
   "pydantic-settings>=2.7.1",
   "python-multipart>=0.0.20",
+  "scikit-learn>=1.5.0",
   "scipy>=1.15.1",
   "sentencepiece>=0.2.0",
   "tensorflow>=2.18.0",
